--- a/06/pxt4/jbd3/Makefile
+++ b/06/pxt4/jbd3/Makefile
@@ -3,7 +3,7 @@
 # Makefile for the linux journaling routines.
 #
 
-obj-$(CONFIG_JBD3) += jbd3.o
+obj-m += jbd3.o
 
 jbd3-objs := transaction.o commit.o recovery.o checkpoint.o revoke.o journal.o
 
